; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_odm.c_FindMinimumRSSI.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_odm.c_FindMinimumRSSI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.hal_com_data = type { %struct.TYPE_2__, %struct.dm_priv }
%struct.TYPE_2__ = type { i32 }
%struct.dm_priv = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*)* @FindMinimumRSSI to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @FindMinimumRSSI(%struct.adapter* %0) #0 {
  %2 = alloca %struct.adapter*, align 8
  %3 = alloca %struct.hal_com_data*, align 8
  %4 = alloca %struct.dm_priv*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  store %struct.adapter* %0, %struct.adapter** %2, align 8
  %6 = load %struct.adapter*, %struct.adapter** %2, align 8
  %7 = call %struct.hal_com_data* @GET_HAL_DATA(%struct.adapter* %6)
  store %struct.hal_com_data* %7, %struct.hal_com_data** %3, align 8
  %8 = load %struct.hal_com_data*, %struct.hal_com_data** %3, align 8
  %9 = getelementptr inbounds %struct.hal_com_data, %struct.hal_com_data* %8, i32 0, i32 1
  store %struct.dm_priv* %9, %struct.dm_priv** %4, align 8
  %10 = load %struct.hal_com_data*, %struct.hal_com_data** %3, align 8
  %11 = getelementptr inbounds %struct.hal_com_data, %struct.hal_com_data* %10, i32 0, i32 0
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %5, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 1
  br i1 %15, label %16, label %24

16:                                               ; preds = %1
  %17 = load %struct.dm_priv*, %struct.dm_priv** %4, align 8
  %18 = getelementptr inbounds %struct.dm_priv, %struct.dm_priv* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load %struct.dm_priv*, %struct.dm_priv** %4, align 8
  %23 = getelementptr inbounds %struct.dm_priv, %struct.dm_priv* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  br label %30

24:                                               ; preds = %16, %1
  %25 = load %struct.dm_priv*, %struct.dm_priv** %4, align 8
  %26 = getelementptr inbounds %struct.dm_priv, %struct.dm_priv* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.dm_priv*, %struct.dm_priv** %4, align 8
  %29 = getelementptr inbounds %struct.dm_priv, %struct.dm_priv* %28, i32 0, i32 1
  store i64 %27, i64* %29, align 8
  br label %30

30:                                               ; preds = %24, %21
  ret void
}

declare dso_local %struct.hal_com_data* @GET_HAL_DATA(%struct.adapter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
